--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,4 +138,5 @@ dependencies {
     androidTestImplementation "com.google.dagger:hilt-android:2.55"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.55"
     kaptAndroidTest "com.google.dagger:hilt-compiler:2.55"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
 }
